typox fixed and revised up to biological sex

--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -54,13 +54,13 @@ execute:
 
 ## Abstract
 
-**RATIONALE:** Racialized populations disproportionately experience exposures that impair lung function. Race-neutral reference equations are intended to mitigate bias due to disproportionate exposures at the cost of reduced precision. However, it is unclear what proportion of racial gaps in lung function is due to social determinants of health (SDoH). Previous studies on the racial gap in lung function between White and Black Americans have attributed 35-39% of the gap in adults to sitting height, 3-8% to poverty, and 2-5% to education. In children, sitting height reportedly accounted for 42-53% of the racial gap, while diet and socio-economic accounted for 7-10% of the gap. We hypothesized that disproportionate impact of SDoH that are captured in NHANES data could help explain a larger proportion of racial gaps in lung function than previously reported. Better quantifying the contribution of measurable social determinants to racial differences in lung function can inform the debate on the proper assessment of lung function impairment across racial groups.
+**RATIONALE:** Racialized populations disproportionately experience exposures that impair lung function. Race-neutral reference equations are intended to mitigate bias due to disproportionate exposures at the cost of reduced precision. We hypothesized that the disproportionate impact of social determinants of health (SDoH) captured in survey data could help explain a larger proportion of racial gaps in lung function than previously reported.
 
-**METHODS:** We defined a series of nested reference populations using data from NHANES 2007-2012 participants. Starting with non-smokers without respiratory symptoms or diagnoses, we sequentially excluded those with confirmed occupational exposure to dust/fumes, physical inactivity, maternal tobacco use, obesity, no home ownership, no insurance, lower education, and self-reported unhealthy diet. Across successive populations, we compared average age-, sex-, and height-adjusted differences in FEV~1~ and FVC between minority race and ethnicity groups and White adults (≥20) and youth (\<20).
+**METHODS:** We defined a series of nested reference populations using data from NHANES 2007-2012 participants. Starting with non-smokers without respiratory symptoms or diagnoses, we sequentially excluded those with confirmed occupational exposure to dust/fumes, physical inactivity, maternal tobacco use, obesity, no home ownership, no insurance, lower education, and self-reported unhealthy diet. Across successive populations, we compared average age-, sex-, and height-adjusted differences in FEV1 and FVC between minority race and ethnicity groups and White participants, separately for adults (≥20) and youths (\<20).
 
-**RESULTS:** From the base reference population to the most restrictive, the number of included participants decreased from 8,802 to 1,921. The percentage of Black participants decreased from 13% to 7% in youth and 11% to 4% in adults. Mexican American participants decreased from 15% to 10% in youth and 10% to 3% in adults. Other-Hispanic participants decreased from 7% to 5% in youth and 6% to 3% in adults. The proportion of participants remained close to the reference population for Asian and other-multiracial participants. After excluding individuals with unfavorable SDoH, the gap between Black and White Americans in FEV~1~ and FVC reduced by 25% and 26% in children and youth, and by 26% and 19%, respectively in adults over 20. The racial gap between Asian and White Americans reduced by 7% and 13% in youth but increased by 14% and 11%, respectively in adults. Mexican Americans had slightly higher FEV~1~ and FVC than White Americans in the baseline population, and excluding those with unfavorable SDoH widened the gap by 0.09 L and 0.06 L in youth and 0.03 L and 0.03 L in adults.
+**RESULTS:** In successively healthier populations, the proportion of participants declined for non-Hispanic Black, Mexican-American, and Other Hispanic populations but remained close to the reference population for Asian and other/multiracial participants. After excluding individuals with unfavorable SDoH, the gap between non-Hispanic Black and White Americans in FEV1 and FVC reduced by 25% and 26% in youths and 26% and 19% in adults. The gap between Asian and White Americans reduced by 7% and 13% among youths but increased by 14% and 11% among adults. At baseline, Mexican Americans had slightly higher adjusted FEV1 and FVC than non-Hispanic White Americans, and excluding those with unfavorable SDoH marginally increased this gap .
 
-**CONCLUSIONS:** The SDoH investigated herein disproportionately affected Black, Mexican American, and Other Hispanic populations, and explained a higher proportion of racial disparities in lung function than previously reported.
+**CONCLUSIONS:** The SDoH investigated herein disproportionately affected Black, Mexican American, and Other Hispanic populations, and explained a higher proportion of racial disparities in lung function than previously reported .
 
 ------------------------------------------------------------------------
 
@@ -72,23 +72,21 @@ In the past two decades, race-based lung function reference values have been wid
 
 Spirometry reference equations are developed with data from "healthy" volunteers, who do not smoke, are asymptomatic, and have not been diagnosed with lung diseases [@quanjer2012; @bowerman2023]. This broad definition could introduce bias, as the reference populations may reflect systemic differences in lung function across racial groups not necessarily because of biological factors but rather due to unequal environmental or social conditions.
 
-The effects of social determinants of health (SDoH) on lung function have been recognized for decades. The 1991 ATS official statements on the interpretative strategies for lung function testing acknowledged the effects of environmental factors, smoking, indoor and outdoor air pollution, occupational exposures, built environment and socio-economic factors as the main sources of between-individual variability in lung function[@lungfun1991]. The statement also mentioned racial differences that persist after adjusting for age, height, smoking, air pollution, and altitude, and hypothesized that these differences may in part be due to body measurements, environmental differences, nutrition, physical activity, and socioeconomic factors [@lungfun1991]. A 1986 review of between-individual variation in forced vital capacity (FVC) attributed up to 30% of variation to biological sex, up to 30% to age, height, and weight, 10% to race, 3% to measurement error, and 27% to unexplained factors[@becklake1986]. Our study focuses on whether the proportion of variability that was historically attributed to race can be explained by SDoH.
+The effects of social determinants of health (SDoH) on lung function have been recognized for decades. The 1991 ATS official statements on the interpretative strategies for lung function testing acknowledged the effects of environmental factors, smoking, indoor and outdoor air pollution, occupational exposures, built environment and socio-economic factors as the main sources of between-individual variability in lung function[@lungfun1991]. The statement also mentioned racial differences that persist after adjusting for age, height, smoking, air pollution, and altitude, and hypothesized that these differences may in part be due to body measurements, environmental differences, nutrition, physical activity, and socioeconomic factors [@lungfun1991]. A 1986 review of between-individual variation in forced vital capacity (FVC) attributed up to 30% of variation to biological sex, up to 30% to age, height, and weight, 10% to race, 3% to measurement error, and 27% to unexplained factors[@becklake1986]. Our study focuses on what proportion of variability that was historically attributed to race can be explained by SDoH.
 
-Our understanding of the contribution of environmental and social factors to racial differences in lung function remains limited. A 2022 systematic review found two representative studies in the US population[@holland2022], one focused on adults[@harik-khan2001] and one on children[@harik-khan2004]. The study on adults attributed 35-39% of the racial gap in lung function to sitting height, 2.5-7.5% to poverty, and 2.0-4.7% to education [@harik-khan2001]. In children, sitting height accounted for 42-53% of the racial gap, while diet and socio-economic status accounted for 7-10% of the racial differences [@harik-khan2004]. However, these studies were limited, as they only considered lung function disparities between Black and White individuals, evaluated a narrow set of SDoH (typically comprised of poverty index, BMI, education, employment, and household size), and used older US National Health and Nutrition Examination Survey (NHANES) III survey data (1988–1994).
-
-Our study aims to determine if a more comprehensive set of SDoH in newer NHANES data can explain a larger proportion of lung function disparities. By considering varied definitions of "healthy" in reference populations, we assess the impact of SDoH on racial lung function disparities across different self-identified racial and ethnic groups. We have presented a preliminary version of these results in the 2024 European Respiratory Congress in Vienna [@adibi2024].
+Our study aims to determine if a more comprehensive set of SDoH in more recent cycles of the US National Health and Nutrition Examination Survey (NHANES) can explain a larger proportion of lung function disparities. By considering varied definitions of "healthy" in reference populations, we assess the impact of SDoH on racial lung function disparities across different self-identified racial and ethnic groups. We have presented a preliminary version of these results at the 2024 European Respiratory Congress in Vienna [@adibi2024].
 
 ## Methods
 
-We used data from three cycles of NHANES (2007-2012) with appropriate sampling weights to account for complex survey design. We included individuals with baseline spirometry that either met or exceeded ATS collection standards. We defined 10 increasingly healthier reference populations. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with confirmed occupational exposures, physical inactivity, maternal smoking, obesity (defined as body-mass-index≥30), no home ownership, no insurance, lower education, and self-declared unhealthy diet.
+We used data from three cycles of NHANES (2007-2012) with appropriate sampling weights to account for complex survey design. We included individuals with baseline spirometry that either met or exceeded ATS collection standards. We carefully reviewed the NHANES variable list and selected SDoH-related variables that could affect lung function. We defined SDoH broadly to include employment and working conditions, income and social status, education, environmental exposures, healthy behaviors, stress, access to healthcare, diet, and housing. We defined 10 increasingly healthier reference populations. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with confirmed occupational exposures, physical inactivity, maternal smoking, obesity (defined as body-mass-index≥30), no home ownership, no insurance, lower education, and self-reported unhealthy diet.
 
-Occupational exposure was defined as having ever been exposed to either mineral dusts, organic dusts, exhaust fumes, or other fumes at work. Individuals who did not have at least 10 minutes of vigorous or moderate activity in a typical week, either for work or recreationally, were considered physically inactive. Lower educated individuals were defined as adults 20 years of age and older with a high school or a GED degree or lower, and 6-19 years old who were neither in school nor on vacation from school. Individuals with self-declared their dietary health as either poor or fair were considered to have a unhealthy diet. We calculated allostatic load score based on twelve commonly used biomarkers, using the method proposed by Liu et al [@liu2021]. Biomarkers included were C-reactive protein, white blood cell count, glycohemoglobin, serum albumin, serum creatinine, total cholesterol, high density lipoprotein (HDL), serum triglycerides, BMI, resting systolic blood pressure, resting diastolic blood pressure measurements, and pulse rate. For each of the twelve biomarkers, the participant received a score of 1 if their value was deemed high-risk (i.e., below 25% percentile for HDL and serum albumin and above 75% percentile for other biomarkers) and 0 if low risk. The allostatic load score ranged from 0 to 12.
+Occupational exposure was defined as exposure to either mineral dust, organic dust, exhaust fumes, or other fumes at work. Individuals who did not have at least 10 minutes of vigorous or moderate activity in a typical week, either for work or recreationally, were considered physically inactive. Lower educated individuals were defined as adults 20 years of age and older with a high school or a GED degree or lower, and 6-19 years old who were neither in school nor on vacation from school. Individuals who self-reported their dietary health as either poor or fair were considered to have an unhealthy diet. Poverty was measured as the ratio of income to federal poverty levels. We calculated allostatic load score based on twelve commonly used biomarkers, using the method proposed by Liu et al [@liu2021]. Biomarkers included were C-reactive protein, white blood cell count, glycohemoglobin, serum albumin, serum creatinine, total cholesterol, high density lipoprotein (HDL), serum triglycerides, BMI, resting systolic blood pressure, resting diastolic blood pressure measurements, and pulse rate. For each of the twelve biomarkers, the participant received a score of 1 if their value was deemed high-risk (i.e., below 25% percentile for HDL and serum albumin and above 75% percentile for other biomarkers) and 0 if low risk. Possible values for allostatic load score ranged from 0 to 12.
 
-For each reference population, the racial gap was calculated as the average difference in forced expiratory volume in one second (FEV~1~) and FVC between Black and White populations adjusted by age, height, and sex in a linear regression. We evaluated the reduction in the racial gap separately for youth (\<20 yrs) and adults (≥20 yrs). The distinction between adults and youth was dictated by how NHANES data is collected and structured; for example, the educational level variable is only available for those 20 years of age and older and school attendance is more applicable to children and youth. We conducted additional exploratory analysis to evaluate the contribution of different variables in explaining racial gaps in lung function. We repeated the main analysis separately for individuals who self-identified with different minority groups, including Non-Hispanic Asian (only available in NHANES 2011-2012), Mexican American, Other Hispanic, and Other, including multiracial.
+For each reference population, the racial gap was calculated as the average difference in forced expiratory volume in one second (FEV~1~) and forced vital capacity (FVC) between Black and White populations adjusted by age, height, and sex in a linear regression model. We evaluated the reduction in the racial gap separately for youth (\<20 yrs) and adults (≥20 yrs). The distinction between adults and youth was dictated by how NHANES data are collected and structured; for example, the educational level variable is only available for those 20 years of age and older and school attendance is more applicable to children and youth. We repeated the main analysis separately for individuals who self-identified with different minority groups, including Non-Hispanic Asian (only available in NHANES 2011-2012), Mexican American, Other Hispanic, and Other/Multiracial.
 
-In the sensitivity analyses, we evaluated the results separately for males and females and those born inside the US. We also evaluated the proportion of the racial gap in lung function between Black and White participants that can be explained by poverty or allostatic load. To examine the effects of our choice of SDoH to account for, we conducted a leave-one-out analysis, where we reproduced the results 9 times, each time leaving one of the SDoH out of the successively defined reference populations.
+In sensitivity analyses, we evaluated results separately for males and females and those born inside the US. We also evaluated the proportion of the racial gap in lung function between Black and White participants that can be explained by poverty or allostatic load. To examine the effects of our choice of SDoH variables, we conducted a leave-one-out analysis, where we reproduced the results 9 times, each time leaving one of the SDoH out of the successively defined reference populations.
 
-All data preparation and analysis was performed in R v4.4.2 using reproducible Quarto documents. A fully reproducible analysis code is publicly available at <https://github.com/aminadibi/who-is-healthy-anyways/>.
+All data preparation and analysis was performed in R v4.4.2 using reproducible Quarto documents. A fully reproducible analysis code is publicly available at <https://github.com/aminadibi/who-is-healthy-anyways/>. This study was exempt from the Research Ethics Board at the University of British Columbia related to the use of publicly available data for research and publication.
 
 ```{r, warning=FALSE, message=FALSE}
 rm(list = ls(all.names = TRUE))
@@ -444,7 +442,9 @@ return(refs)
 
 ## Results
 
-Of the 30,442 participants in NHANES 2007-2012, we included 17,032 participants who had high-quality spirometry. Excluding smokers and individuals with respiratory diagnoses or symptoms led to 8,802 participants, including 4,832 adults and 3,970 youths (@fig-flowchart). Participant flow across successive reference populations is provided in appendix (@suppfig-flowrefs). Characteristics of participants is summarized in @tbl-table1 .
+### Participants
+
+Of the 30,442 participants in NHANES 2007-2012, we included 17,032 participants who had high-quality spirometry. Excluding smokers and individuals with respiratory diagnoses or symptoms led to 8,802 participants, including 4,832 adults and 3,970 youths (@fig-flowchart). Participant flow across successive reference populations is provided in the appendix (@suppfig-flowrefs). Characteristics of participants are summarized in @tbl-table1.
 
 ```{r}
 
@@ -573,27 +573,27 @@ predPlot <- function(df) {
 
 ```
 
-From the base reference population to the most restrictive, the number of included participants decreased from 8,802 to 1921. The proportion of participants decreased from 13% to 7% for Black youth, from 11% to 4% for Black adults, from 15% to 10% for Mexican American youth, from 10% to 3% for Mexican American adults, from 7% to 5% for Other Hispanic youth, and from 6% to 3% for Other Hispanic adults (@fig-racialgap). The reduction in the proportion of participants after multiple exclusions based on SDoH confirms disproportionate impact of these factors on Black, Mexican American, and Other Hispanic populations in the US. The proportion of participants remained within 1% of the reference population for participants who identified as either Asian or other race, including multiracial.
+### Disproportionate Impact
 
-In the baseline reference population, average FEV~1~ and FVC were 0.35 L and 0.42 L higher in White youth compared with Black youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.50 L for FEV~1~ and 0.69 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV~1~ and FVC was reduced by 25% and 26% in youth and by 26% and 19% in adults (@fig-racialgap).
+From the base reference population to the most restrictive, the number of included participants decreased from 8,802 to 1,921. The proportion of participants decreased from 13% to 7% for Black youths, from 11% to 4% for Black adults, from 15% to 10% for Mexican American youths, from 10% to 3% for Mexican American adults, from 7% to 5% for Other Hispanic youths, and from 6% to 3% for Other Hispanic adults (@fig-racialgap). The reduction in the proportion of participants after multiple exclusions based on SDoH confirms the disproportionate impact of these factors on Black, Mexican American, and Other Hispanic populations in the US. The proportion of participants remained within 1% of the reference population for participants who identified as either Asian or Other/Multiracial.
 
-Excluding individuals with various SDoH did not reduce the proportion of Asian individuals. In the baseline reference population, average FEV~1~ and FVC were 0.18 L and 0.31 L higher in White youth compared with Asian youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.37 L for FEV~1~ and 0.50 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV~1~ and FVC was reduced by 7% and 13% in youth but, surprisingly, increased by 14% and 11% in adults (@suppfig-Asian).
+In the baseline reference population, average FEV~1~ and FVC were 0.35 L and 0.42 L higher in White youths compared with Black youths, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.50 L for FEV~1~ and 0.69 for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 25% and 26% in youths and by 26% and 19% in adults (@fig-racialgap).
 
-Mexican American youth had slightly higher FEV~1~ and FVC at baseline compared to White youth. Average FEV~1~ and FVC were 0.06 L and 0.04 L higher in Mexican American youth compared to White youth, after adjusting for age, height, and biological sex at birth. Mexican American and White adults had similar adjusted FEV~1~ and FVC at baseline (@suppfig-Mexican). Excluding individuals with unfavourable SDoH resulted in higher FEV~1~ and FVC values for Mexican American population compared to White population. Adjusted average FEV~1~ and FVC values for Mexican American youth were 0.09 L and 0.06 L higher than White youth. For adults, average FEV~1~ and FVC were both higher by 0.03 L compared to White adults (@suppfig-Mexican).
+Excluding individuals with various SDoH did not reduce the proportion of Asian individuals. In the baseline reference population, average FEV~1~ and FVC were 0.18 L and 0.31 L higher in White youths compared with Asian youths, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.37 L for FEV~1~ and 0.50 for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 7% and 13% in youths but, surprisingly, increased by 14% and 11% in adults (@suppfig-Asian).
 
-The appendix includes additional results for non-Mexican Hispanic population (@suppfig-hispanic) and other race including multiracial individuals (@suppfig-Other).
+Mexican American youths had slightly higher FEV~1~ and FVC at baseline compared to White youths. Average FEV~1~ and FVC were 0.06 L and 0.04 L higher in Mexican American youths compared to White youths, after adjusting for age, height, and biological sex at birth. Mexican American and White adults had similar adjusted FEV~1~ and FVC at baseline (@suppfig-Mexican). Excluding individuals with unfavorable SDoH resulted in higher FEV~1~ and FVC values for the Mexican American population compared to the White population. Adjusted average FEV~1~ and FVC values for Mexican American youth were 0.09 L and 0.06 L higher than White youth. For adults, average FEV~1~ and FVC were both higher by 0.03 L compared to White adults (@suppfig-Mexican).
+
+The appendix includes additional results for the non-Mexican Hispanic population (@suppfig-hispanic) and Other/Multiracial. (@suppfig-Other).
 
 ### Secondary and Sensitivity Analyses
 
-We conducted a number of additional analyses for on lung function gap between Black and White populations.
+We conducted several additional analyses to evaluate lung function gaps between Black and Non-Hispanic White Americans.
 
 #### Biological Sex
 
-We also looked at the racial gap in lung function from the most permissive to the most restrictive reference population, separately for females and males. In females, the proportion of Black participants decreased from 20% to 10% in youth and 15% to 5% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 16% and 19% in youth, and by 27% and 20% in adults, respectively (appendix @suppfig-females). In males, the proportion of Black participants decreased from 17% to 8% in youth and 12% to 4% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 35% and 34% in youth and by 14% and 8% in adults (appendix @suppfig-males).
+In females, excluding those with unfavorable SDoH reduced the racial gap in FEV1 and FVC by 16% and 19% in youths, and 27% and 20% in adults, respectively (appendix @suppfig-females)). In males, excluding those with unfavorable SDoH reduced the racial gap in FEV1 and FVC by 35% and 34% in youths, and 14% and 8% in adults (appendix Figure S3).
 
-#### Home Ownership, BMI, and Occupation
-
-After excluding patients solely based on home ownership, BMI, and occupation, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 11% in adults, as shown in @fig-racialgap-home-bmi-job. Limiting reference populations to non-obese homeowners without occupational exposures to dusts and fumes reduced the racial gap in FEV~1~ and FVC by 21% and 19% in youth and 20% and 16% in adults.
+We also looked at the racial gap in lung function from the most permissive to the most restrictive reference population, separately for females and males. In females, the proportion of Black participants decreased from 20% to 10% in youth and 15% to 5% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 16% and 19% in youth, and by 27% and 20% in adults, respectively (appendix . In males, the proportion of Black participants decreased from 17% to 8% in youth and 12% to 4% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 35% and 34% in youth and by 14% and 8% in adults (appendix @suppfig-males).
 
 #### Country of Birth
 
@@ -604,6 +604,8 @@ We also explored the intersection of self-identified race and country of birth. 
 In the leave-one-out analysis for the youth, the proportion of racial gap explained by SDoH remained consistent at 25% for FEV~1~ and 26% for FVC. In the leave-one-out analysis for adults, the proportion of racial gap explained by SDoH was consistently 26% for FEV~1~ and 19% for FVC, except for when diet health was not accounted for, in which case the proportion of racial gaps explained by SDoH was 29% for FEV1 and 18% for FVC. Further details are provided in the supplement (@suppfig-leavejob to @suppfig-leavediet).
 
 ## Discussion
+
+Our understanding of the contribution of environmental and social factors to racial differences in lung function remains limited. A 2022 systematic review found two representative studies in the US population[@holland2022], one focused on adults[@harik-khan2001] and one on children[@harik-khan2004]. The study on adults attributed 35-39% of the racial gap in lung function to sitting height, 2.5-7.5% to poverty, and 2.0-4.7% to education [@harik-khan2001]. In children, sitting height accounted for 42-53% of the racial gap, while diet and socio-economic status accounted for 7-10% of the racial differences [@harik-khan2004]. However, these studies were limited, as they only considered lung function disparities between Black and White individuals, evaluated a narrow set of SDoH (typically comprised of poverty index, BMI, education, employment, and household size), and used older US National Health and Nutrition Examination Survey (NHANES) III survey data (1988–1994).
 
 Our results show that a higher than previously reported proportion of racial differences in lung function between Black and White Americans can be explained by differences in SDoH [@harik-khan2001; @harik-khan2004]. Within studied SDoH variables in NHANES 2007-2012, we were able to explain 26% of the racial gap in lung function in adults, and as much as 35% of the gap in males under 20 years of age. The true contribution of SDoH to racial gaps in lung function is likely higher, as only some aspects of SDoH are properly captured in NHANES. The difficulty of measuring SDoH and our incomplete and evolving understanding of the complex interplay between racism, social, and environmental factors suggest that what we see might just be the tip of the iceberg.
 
@@ -617,7 +619,7 @@ What are the implications for lung function reference equations? Since these equ
 
 The newly recommended race-averaged GLI-Global reference equations no longer assume that racial differences in lung function are normal and benign differences. However, do they assume these differences are solely due to disproportionate environmental exposures and SDoH? The answer seems to be no, as GLI-Global equations use averages of four race-specific reference lung function projections, as opposed to projecting the highest race-specific value for all [@bowerman2023].
 
-Developing unbiased, fair, and practical lung function reference equations is challenging because of our limited understanding of complex exposures, lack of good representative data, and diverse applications of pulmonary function tests [@adibi; @diao2024]. Recognizing the good faith efforts of those working diligently to find a balance between feasibility, practicality, and an ideal accounting for all potential biases, one potential way forward, at least for some use cases of spirometry, involves explicitly accounting for effect of complex exposures. This does not require asking patients for their exposure history or social determinants at the point of care and can be achieved by tightening the inclusion criteria in the reference populations at the reference algorithm development stage. Excluding individuals with unfavourable SDoH from reference populations results in a more uniformly healthy reference population across racial identities and makes the dataset less biased. However, this approach may reduce the racial representativeness of the data due to disproportionate exposures. Ensuring a sufficiently large and representative initial sample may allow oversampling to achieve representativeness across all groups.
+Developing unbiased, fair, and practical lung function reference equations is challenging because of our limited understanding of complex exposures, lack of good representative data, and diverse applications of pulmonary function tests [@adibi; @diao2024]. Recognizing the good faith efforts of those working diligently to find a balance between feasibility, practicality, and an ideal accounting for all potential biases, one potential way forward, at least for some use cases of spirometry, involves explicitly accounting for effect of complex exposures. This does not require asking patients for their exposure history or social determinants at the point of care and can be achieved by tightening the inclusion criteria in the reference populations at the reference algorithm development stage. Excluding individuals with unfavorable SDoH from reference populations results in a more uniformly healthy reference population across racial identities and makes the dataset less biased. However, this approach may reduce the racial representativeness of the data due to disproportionate exposures. Ensuring a sufficiently large and representative initial sample may allow oversampling to achieve representativeness across all groups.
 
 Proposals for developing lung function standards using data from participants of "middle-class origin who live and work in clean environments" have appeared in the literature as early as 1984 [@Myers1984]. There is also precedence for choosing reference populations based on favourable SDoH outside of lung function testing. One prominent example is the World Health Organization (WHO) Multicentre Growth Reference Study that was conducted to create birth to 2-years growth standards [@mercedes2004]. The study's sites were chosen through a meticulous process that took into account geographical and ethnic representativeness, and included affluent communities in the cities of New Delhi and Accra, as well as participants from Muscat, Oslo, Davis, and Pelotas. The eligibility criteria for individual mother and children included no health, environmental, and economic constraints on growth, mother's willingness to follow WHO feeding recommendations, among others [@mercedes2004].
 
@@ -824,7 +826,7 @@ flowchart TD
  label(table1$other_fumes) <- "Occupational Exposure to Other Fumes"
  label(table1$education_adults) <- "Education Level for Adults"
  label(table1$now_attending_school) <- "Currently Attending School (for youth)"
- label(table1$healthy_diet) <- "Self-evaluated Diet Health"
+ label(table1$healthy_diet) <- "self-reported Diet Health"
  label(table1$vigorous_work) <- "Vigorous Activity at Work (10 min/week)"
  label(table1$vigorous_recreational) <- "Recreational Vigorous Activity (10 min/week)"
  label(table1$moderate_work) <- "Moderate Activity at Work (10 min/week)"
@@ -1111,7 +1113,7 @@ flowchart TD
     A6[n=1258] -- Excluded those who did not own thier home --> A7[n=816]
     A7[n=816] -- Excluded those without health insurance --> A8[n=711]
     A8[n=711] -- Excluded those who did not ever attend college --> A9[n=571]
-    A9[n=571] -- Excluded those with self-evaluated unhealthy diet --> A10[n=514]
+    A9[n=571] -- Excluded those with self-reported unhealthy diet --> A10[n=514]
     Y1["Youth, n=3,970"] -- Excluded those with occupational exposures --> Y2[n=3767]
     Y2[n=
     3767] -- Excluded those not physically active --> Y3[n=3432]
@@ -1128,7 +1130,7 @@ flowchart TD
     Y8[n=
     1455] -- Excluded those who do not attend school --> Y9[n=1441]
     Y9[n=
-    1441] -- Excluded those with self-evaluated unhealthy diet --> Y10[n=1407]
+    1441] -- Excluded those with self-reported unhealthy diet --> Y10[n=1407]
 
 ```
 :::
