revised till country of birth

--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -591,11 +591,11 @@ We conducted several additional analyses to evaluate lung function gaps between 
 
 #### Biological Sex
 
-In females, excluding those with unfavorable SDoH reduced the racial gap in FEV1 and FVC by 16% and 19% in youths, and 27% and 20% in adults, respectively (appendix @suppfig-females)). In males, excluding those with unfavorable SDoH reduced the racial gap in FEV1 and FVC by 35% and 34% in youths, and 14% and 8% in adults (appendix Figure S3).
-
-We also looked at the racial gap in lung function from the most permissive to the most restrictive reference population, separately for females and males. In females, the proportion of Black participants decreased from 20% to 10% in youth and 15% to 5% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 16% and 19% in youth, and by 27% and 20% in adults, respectively (appendix . In males, the proportion of Black participants decreased from 17% to 8% in youth and 12% to 4% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 35% and 34% in youth and by 14% and 8% in adults (appendix @suppfig-males).
+In females, excluding those with unfavorable SDoH reduced the racial gap in FEV1 and FVC by 16% and 19% in youths, and 27% and 20% in adults, respectively (appendix @suppfig-females)). In males, excluding those with unfavorable SDoH reduced the racial gap in FEV1 and FVC by 35% and 34% in youths, and 14% and 8% in adults (appendix @suppfig-males).
 
 #### Country of Birth
+
+After excluding those with unfavorable SDoH, the racial gap in FEV1 and FVC was reduced by 24% and 25% in US-born youth, and 35% and 23% in US-born adults (Figure S4). Black and White individuals born outside of the US had higher FEV1 and FVC were less exposed to second-hand and maternal smoking, reported healthier diets, but also had more occupational exposures (Table S2). Black individuals born out of the US had higher income and were more likely to be covered by health insurance than US-born Black individuals while among White participants, those who were born in the US had higher income and higher insurance coverage (Table S2).
 
 We also explored the intersection of self-identified race and country of birth. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 24% and 25% in US-born youth, and by 35% and 23% in US-born adults (@suppfig-usborn). Black and White individuals born outside of the US had higher FEV~1~ and FVC, were less exposed to second-hand and maternal smoking, had healthier diets, but also had more occupational exposures (@supptab-fig1byusborn). Black individuals born out of the US had higher income and were more likely to be covered by health insurance than US-born Black individuals while among White participants, those who were born in the US had higher income and higher insurance coverage (@supptab-fig1byusborn).
 
